Add fancier job
Signed-off-by: Alex Humphreys <alex.humphreys@here.com>

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,42 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: Ubuntu
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '*'
+    tags:
+      - '*'
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  SCHEME: scheme
+  IDRIS2_TESTS_CG: chez
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: main
+      - name: Checkout tools repo
+        uses: actions/checkout@v2
+        with:
+          repository:  idris-lang/Idris2
+          path: idris2
+      - name: Install build dependencies
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt-get install -y chezscheme
+          echo "::add-path::$HOME/.idris2/bin"
+      - name: Build from bootstrap
+        run: |
+          cd idris2
+          make bootstrap && make install
+        shell: bash
+      - name: Build and test
+        run: |
+          cd main
+          make clean && make build && make install && make test INTERACTIVE=''
+        shell: bash
