--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get install -y chezscheme
-          echo "::add-path::$HOME/.idris2/bin"
+          echo "{$HOME/.idris2/bin}" >> $GITHUB_PATH
       - name: Build from bootstrap
         run: |
           cd idris2
