--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: main
+          submodules: 'true'
       - name: Checkout tools repo
         uses: actions/checkout@v2
         with:
@@ -29,13 +30,13 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get install -y chezscheme
-          echo "{$HOME/.idris2/bin}" >> $GITHUB_PATH
-      - name: Build from bootstrap
+          echo "$HOME/.idris2/bin" >> $GITHUB_PATH
+      - name: idris2 build from bootstrap
         run: |
           cd idris2
-          make bootstrap && make install
+          make bootstrap-build && make install
         shell: bash
-      - name: Build and test
+      - name: idrall build and test
         run: |
           cd main
           make clean && make build && make install && make test INTERACTIVE=''
