"manually" checkout dhall-repo
Signed-off-by: Alex Humphreys <alex.humphreys@here.com>

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Checkout tools repo
+        uses: actions/checkout@v2
         with:
-          submodules: 'true'
+          repository: dhall-lang/dhall-lang
+          path: dhall-lang
+          ref: '12d5a99'
       - name: idrall build and test
         run: |
           make clean && make build && make install && make test INTERACTIVE=''
