Add --only to Makefile
Signed-off-by: Alex Humphreys <alex.humphreys@here.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@ INTERACTIVE ?= --interactive
 .PHONY: testbin test
 
 test:
-	./build/exec/runtests idrall $(INTERACTIVE)
+	./build/exec/runtests idrall $(INTERACTIVE) --only $(only)
 
 testbin:
 	idris2 --build tests.ipkg
