--- a/tests/Makefile
+++ b/tests/Makefile
@@ -14,3 +14,4 @@ clean:
 	@find . -type f -name '*.ttc' -exec rm -f {} \;
 	@find . -type f -name '*.ttm' -exec rm -f {} \;
 	@find . -type f -name '*.ibc' -exec rm -f {} \;
+	@find . -type f -name '*.idr~' -exec rm -f {} \;
