--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: idrall build and test
         run: |
-          apt update && apt install git
+          apt update && apt install git -y
         shell: bash
       - name: Checkout
         uses: actions/checkout@v2
